가르침 문제 C++ 풀이

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "set": "cpp",
         "queue": "cpp",
         "utility": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "xutility": "cpp",
+        "xstring": "cpp"
     }
 }
