C++ json Setting Update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "xutility": "cpp",
     "xstring": "cpp",
     "iostream": "cpp",
-    "deque": "cpp"
+    "deque": "cpp",
+    "stack": "cpp"
   }
 }
