책 페이지 문제 C++ 풀이

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "xstring": "cpp",
     "iostream": "cpp",
     "deque": "cpp",
-    "stack": "cpp"
+    "stack": "cpp",
+    "string": "cpp"
   }
 }
