암기왕 문제 풍ㄹ이 및 설명

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "iostream": "cpp",
     "deque": "cpp",
     "stack": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "unordered_set": "cpp"
   }
 }
